@@ -2,7 +2,7 @@
  * **************************************************-
  * Ingrid Portal Apps
  * ==================================================
- * Copyright (C) 2014 - 2022 wemove digital solutions GmbH
+ * Copyright (C) 2014 - 2023 wemove digital solutions GmbH
  * ==================================================
  * Licensed under the EUPL, Version 1.1 or – as soon they will be
  * approved by the European Commission - subsequent versions of the
@@ -169,6 +169,10 @@ public class SearchResultPortlet extends GenericVelocityPortlet {
         context.put("mapParamExtent", request.getParameter("extent") != null ? request.getParameter("extent"): "");
         context.put("mapParamLayer", request.getParameter("layer") != null ? request.getParameter("layer"): "");
 
+        context.put( "leafletBboxInverted", PortalConfig.getInstance().getBoolean(PortalConfig.PORTAL_MAPCLIENT_LEAFLET_BBOX_INVERTED));
+        context.put( "leafletBboxColor", PortalConfig.getInstance().getString(PortalConfig.PORTAL_MAPCLIENT_LEAFLET_BBOX_COLOR));
+        context.put( "leafletBboxFillOpacity", PortalConfig.getInstance().getFloat(PortalConfig.PORTAL_MAPCLIENT_LEAFLET_BBOX_FILLOPACITY));
+
         context.put("detailUseParamPlugid", PortalConfig.getInstance().getBoolean( PortalConfig.PORTAL_DETAIL_USE_PARAMETER_PLUGID));
 
         // add request language, used to localize the map client
@@ -190,7 +194,7 @@ public class SearchResultPortlet extends GenericVelocityPortlet {
         try {
             reqParam = request.getParameter(Settings.PARAM_STARTHIT_RANKED);
             if (SearchState.adaptSearchState(request, Settings.PARAM_STARTHIT_RANKED, reqParam)) {
-                rankedStartHit = (new Integer(reqParam)).intValue();
+                rankedStartHit = (Integer.valueOf(reqParam)).intValue();
             }
         } catch (Exception ex) {
             if (log.isErrorEnabled()) {
